--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 		<title>Welcome to my world</title>
 	</head>
 	<body>
-		<h1>This is my world</h1>
+		<h1>This is my world, Please access from github</h1>
 	</body>
 </html>
