--- a/index.html
+++ b/index.html
@@ -5,4 +5,14 @@
 	<body>
 		<h1>This is my world, Please access from github</h1>
 	</body>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-143740081-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-143740081-1');
+	</script>
+
 </html>
