--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 		<title>Welcome to my world</title>
 	</head>
 	<body>
-		<h1>This is my world, Please access from github</h1>
-		<h1>This is your world, Please access from github desktop</h1>
-		<h1>This is my world, Please access from github desktop</h1>
-		<h1>Jasmin Playing Here</h1>
+		<h1>Hello World</h1>
 	</body>
 </html>
