fix image path error

--- a/email/email-templates/email-newsletter.htm
+++ b/email/email-templates/email-newsletter.htm
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Adminty - Premium Admin Template by Colorlib</title>
         <meta name="viewport" content="width=device-width">
-        <link rel="icon" href="img\favicon.ico" type="image/x-icon">
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
        <style type="text/css">
             @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
                 body[yahoo] .buttonwrapper { background-color: transparent !important; }
@@ -38,7 +38,7 @@
             </tr>
             <tr>
                 <td align="center" bgcolor="#0073AA" style="padding: 20px 20px 20px 20px; color: #ffffff; font-family: Arial, sans-serif; font-size: 36px; font-weight: bold;">
-                    <img src="img\newsletter.png" alt="Newsletter Icon" width="200" height="200" style="display:block;"><br>
+                    <img src="img/newsletter.png" alt="Newsletter Icon" width="200" height="200" style="display:block;"><br>
                     Newsletter #1
                 </td>
             </tr>
@@ -49,7 +49,7 @@
             </tr>
             <tr>
                 <td bgcolor="#ffffff" style="padding: 10px 20px 20px 20px; color: #555555; font-family: Arial, sans-serif; font-size: 15px; line-height: 24px;">
-                    <img src="img\image1.jpg" alt="Mountain Image" width="100%" style="display: block; height: auto;">
+                    <img src="img/image1.jpg" alt="Mountain Image" width="100%" style="display: block; height: auto;">
                 </td>
             </tr>
             <tr>
@@ -64,7 +64,7 @@
             </tr>
             <tr>
                 <td bgcolor="#ffffff" style="padding: 10px 20px 20px 20px; color: #555555; font-family: Arial, sans-serif; font-size: 15px; line-height: 24px;">
-                    <img src="img\image2.jpg" alt="Office Image" width="100%" style="display: block; height: auto;">
+                    <img src="img/image2.jpg" alt="Office Image" width="100%" style="display: block; height: auto;">
                 </td>
             </tr>
             <tr>
@@ -79,7 +79,7 @@
             </tr>
             <tr>
                 <td bgcolor="#ffffff" style="padding: 10px 20px 20px 20px; color: #555555; font-family: Arial, sans-serif; font-size: 15px; line-height: 24px;">
-                    <img src="img\image3.jpg" alt="Nature Image" width="100%" style="display: block; height: auto;">
+                    <img src="img/image3.jpg" alt="Nature Image" width="100%" style="display: block; height: auto;">
                 </td>
             </tr>
             <tr>
@@ -97,7 +97,7 @@
                     <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td height="128" style="padding: 0 20px 20px 0;">
-                                <img src="img\icon4.png" alt="Icon #4" width="128" height="128" style="display: block;">
+                                <img src="img/icon4.png" alt="Icon #4" width="128" height="128" style="display: block;">
                             </td>
                         </tr>
                     </table>
@@ -131,7 +131,7 @@
                     <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td height="128" style="padding: 0 20px 20px 0;">
-                                <img src="img\icon5.png" alt="Icon #5" width="128" height="128" style="display: block;">
+                                <img src="img/icon5.png" alt="Icon #5" width="128" height="128" style="display: block;">
                             </td>
                         </tr>
                     </table>
@@ -165,7 +165,7 @@
                     <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td height="128" style="padding: 0 20px 20px 0;">
-                                <img src="img\icon6.png" alt="Icon #6" width="128" height="128" style="display: block;">
+                                <img src="img/icon6.png" alt="Icon #6" width="128" height="128" style="display: block;">
                             </td>
                         </tr>
                     </table>
