--- a/email/email-templates/email-activation.htm
+++ b/email/email-templates/email-activation.htm
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Adminty - Premium Admin Template by Colorlib</title>
         <meta name="viewport" content="width=device-width">
-        <link rel="icon" href="img\favicon.ico" type="image/x-icon">
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
        <style type="text/css">
             @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
                 body[yahoo] .buttonwrapper { background-color: transparent !important; }
@@ -38,7 +38,7 @@
             </tr>
             <tr>
                 <td align="center" bgcolor="#0073AA " style="padding: 20px 20px 20px 20px; color: #ffffff; font-family: Arial, sans-serif; font-size: 36px; font-weight: bold;">
-                    <img src="img\proui_logo.png" alt="ProUI Logo" width="152" height="152" style="display:block;">
+                    <img src="img/proui_logo.png" alt="ProUI Logo" width="152" height="152" style="display:block;">
                 </td>
             </tr>
             <tr>
