--- a/email/email-templates/email-welcome.htm
+++ b/email/email-templates/email-welcome.htm
@@ -6,7 +6,7 @@
         <title>Adminty - Premium Admin Template by Colorlib</title>
         <meta name="viewport" content="width=device-width">
         <!-- Favicon icon -->
-        <link rel="icon" href="img\favicon.ico" type="image/x-icon">
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
        <style type="text/css">
             @media only screen and (max-width: 550px), screen and (max-device-width: 550px) {
                 body[yahoo] .buttonwrapper { background-color: transparent !important; }
@@ -40,7 +40,7 @@
             </tr>
             <tr>
                 <td align="center" bgcolor="#0073AA" style="padding: 20px 20px 20px 20px; color: #ffffff; font-family: Arial, sans-serif; font-size: 36px; font-weight: bold;">
-                    <img src="img\proui_logo.png" alt="ProUI Logo" width="152" height="152" style="display:block;">
+                    <img src="img/proui_logo.png" alt="ProUI Logo" width="152" height="152" style="display:block;">
                     Welcome
                 </td>
             </tr>
@@ -55,7 +55,7 @@
                     <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td height="128" style="padding: 0 20px 20px 0;">
-                                <img src="img\icon1.png" alt="Icon #1" width="128" height="128" style="display: block;">
+                                <img src="img/icon1.png" alt="Icon #1" width="128" height="128" style="display: block;">
                             </td>
                         </tr>
                     </table>
@@ -89,7 +89,7 @@
                     <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td height="128" style="padding: 0 20px 20px 0;">
-                                <img src="img\icon2.png" alt="Icon #2" width="128" height="128" style="display: block;">
+                                <img src="img/icon2.png" alt="Icon #2" width="128" height="128" style="display: block;">
                             </td>
                         </tr>
                     </table>
@@ -123,7 +123,7 @@
                     <table width="128" align="left" border="0" cellpadding="0" cellspacing="0">
                         <tr>
                             <td height="128" style="padding: 0 20px 20px 0;">
-                                <img src="img\icon3.png" alt="Icon #3" width="128" height="128" style="display: block;">
+                                <img src="img/icon3.png" alt="Icon #3" width="128" height="128" style="display: block;">
                             </td>
                         </tr>
                     </table>
